load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_toolchain",
)

haskell_toolchain(
    name = "ghc",
    tools = "@ghc//:bin",
    version = "8.2.2",
)

haskell_import(name = "base")
haskell_import(name = "numbers")
haskell_import(name = "fixed")
haskell_import(name = "bifunctors")
haskell_import(name = "text")
haskell_import(name = "formatting")
haskell_import(name = "uom-plugin")

haskell_library(
    name = "flight-units",
    srcs = glob(["library/**/*.hs"]),
    src_strip_prefix = "library",
    compiler_flags = [
        "-threaded",

        "-Wall",
        "-fplugin Data.UnitsOfMeasure.Plugin",

        "-XDataKinds",
        "-XDeriveFunctor",
        "-XDeriveGeneric",
        "-XDeriveAnyClass",
        "-XDerivingStrategies",
        "-XDisambiguateRecordFields",
        "-XFlexibleContexts",
        "-XFlexibleInstances",
        "-XGeneralizedNewtypeDeriving",
        "-XGADTs",
        "-XLambdaCase",
        "-XMultiParamTypeClasses",
        "-XMultiWayIf",
        "-XNamedFieldPuns",
        "-XOverloadedStrings",
        "-XPackageImports",
        "-XParallelListComp",
        "-XPartialTypeSignatures",
        "-XPatternSynonyms",
        "-XQuasiQuotes",
        "-XRankNTypes",
        "-XRecordWildCards",
        "-XScopedTypeVariables",
        "-XStandaloneDeriving",
        "-XTemplateHaskell",
        "-XTypeApplications",
        "-XTypeFamilies",
        "-XTypeOperators",
        "-XTypeSynonymInstances",
        "-XTupleSections",
        "-XUndecidableInstances",
        ],
    deps = [
        ":base",
        ":numbers",
        ":fixed",
        ":bifunctors",
        ":text",
        ":formatting",
        ":uom-plugin",
        "//siggy-chardust:siggy-chardust",
        ],
)
