load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_toolchain",
)

haskell_toolchain(
    name = "ghc",
    tools = "@ghc//:bin",
    version = "8.2.2",
)

haskell_import(name = "base")
haskell_import(name = "uom-plugin")
haskell_import(name = "aeson")
haskell_import(name = "scientific")
haskell_import(name = "newtype")

haskell_library(
    name = "flight-zone",
    srcs = glob(["library/**/*.hs"]),
    src_strip_prefix = "library",
    compiler_flags = [
        "-threaded",

        "-Wall",
        "-fplugin Data.UnitsOfMeasure.Plugin",

        "-XDataKinds",
        "-XDeriveFunctor",
        "-XDeriveGeneric",
        "-XDeriveAnyClass",
        "-XDerivingStrategies",
        "-XDisambiguateRecordFields",
        "-XFlexibleContexts",
        "-XFlexibleInstances",
        "-XGeneralizedNewtypeDeriving",
        "-XGADTs",
        "-XLambdaCase",
        "-XMultiParamTypeClasses",
        "-XMultiWayIf",
        "-XNamedFieldPuns",
        "-XOverloadedStrings",
        "-XPackageImports",
        "-XParallelListComp",
        "-XPartialTypeSignatures",
        "-XPatternSynonyms",
        "-XQuasiQuotes",
        "-XRankNTypes",
        "-XRecordWildCards",
        "-XScopedTypeVariables",
        "-XStandaloneDeriving",
        "-XTemplateHaskell",
        "-XTypeApplications",
        "-XTypeFamilies",
        "-XTypeOperators",
        "-XTypeSynonymInstances",
        "-XTupleSections",
        "-XUndecidableInstances",
        ],
    deps = [
        ":base",
        ":uom-plugin",
        ":aeson",
        ":scientific",
        ":newtype",
        "//siggy-chardust:siggy-chardust",
        "//detour-via-sci:detour-via-sci",
        "//detour-via-uom:detour-via-uom",
        "//units:flight-units",
        "//latlng:flight-latlng",
        ],
    visibility = ["//visibility:public"],
)
