load("@flare_timing//:default-extensions.bzl", "DEFAULT_EXTENSIONS")

load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_toolchain",
)

haskell_toolchain(
    name = "ghc",
    tools = "@ghc//:bin",
    version = "8.2.2",
)

haskell_import(name = "base")
haskell_import(name = "aeson")
haskell_import(name = "bytestring")
haskell_import(name = "cmdargs")
haskell_import(name = "directory")
haskell_import(name = "filepath")
haskell_import(name = "filemanip")
haskell_import(name = "mtl")
haskell_import(name = "raw-strings-qq")
haskell_import(name = "safe-exceptions")
haskell_import(name = "servant")
haskell_import(name = "servant-server")
haskell_import(name = "transformers")
haskell_import(name = "wai")
haskell_import(name = "wai-cors")
haskell_import(name = "wai-extra")
haskell_import(name = "warp")
haskell_import(name = "yaml")
haskell_import(name = "uom-plugin")

COMPILER_FLAGS = [
    "-rtsopts",
    "-threaded",
    "-with-rtsopts=-N",
    "-Wall",
    ] + DEFAULT_EXTENSIONS

haskell_binary(
    name = "app-serve",
    srcs = glob(["comp-serve/**/*.hs"]),
    compiler_flags = COMPILER_FLAGS,
    deps = [
        ":base",
        ":aeson",
        ":bytestring",
        ":cmdargs",
        ":directory",
        ":filepath",
        ":filemanip",
        ":mtl",
        ":raw-strings-qq",
        ":safe-exceptions",
        ":servant",
        ":servant-server",
        ":transformers",
        ":wai",
        ":wai-cors",
        ":wai-extra",
        ":warp",
        ":yaml",
        "//comp:flight-comp",
        "//cmd:flight-cmd",
        "//gap:flight-gap",
        "//kml:flight-kml",
        "//latlng:flight-latlng",
        "//mask:flight-mask",
        "//route:flight-route",
        "//scribe:flight-scribe",
        "//siggy-chardust:siggy-chardust",
        ],
    visibility = ["//visibility:public"],
)
