package(default_visibility = ["//visibility:public"])

load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_toolchain_library",
    "haskell_library",
    "haskell_test",
)

haskell_toolchain_library(name = "base",)

haskell_library(
    name = "siggy-chardust",
    srcs = glob(['library/Rounding.hs']),
    deps = ["base"],
)

haskell_test(
    name = "digits",
    srcs = glob(["test-suite-digits/Rounding.hs"]),
    deps = [
        "@stackage//:tasty",
        "@stackage//:tasty-hunit",
        "@stackage//:tasty-quickcheck",
        "@stackage//:tasty-smallcheck",
        "@stackage//:smallcheck",
    ],
)
