load("@flare_timing//:default-extensions.bzl", "DEFAULT_EXTENSIONS")

load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_toolchain",
)

haskell_toolchain(
    name = "ghc",
    tools = "@ghc//:bin",
    version = "8.2.2",
)

haskell_import(name = "base")
haskell_import(name = "directory")
haskell_import(name = "filepath")
haskell_import(name = "lens")
haskell_import(name = "mtl")
haskell_import(name = "safe-exceptions")
haskell_import(name = "these")
haskell_import(name = "time")
haskell_import(name = "uom-plugin")

haskell_library(
    name = "flight-time",
    srcs = glob(["library/**/*.hs"]),
    src_strip_prefix = "library",
    compiler_flags = [
        "-threaded",
        "-Wall",
        "-fplugin Data.UnitsOfMeasure.Plugin",
        ] + DEFAULT_EXTENSIONS,
    deps = [
        ":base",
        ":directory",
        ":filepath",
        ":lens",
        ":mtl",
        ":safe-exceptions",
        ":these",
        ":time",
        ":uom-plugin",
        "//clip:flight-clip",
        "//comp:flight-comp",
        "//kml:flight-kml",
        "//latlng:flight-latlng",
        "//lookup:flight-lookup",
        "//mask:flight-mask",
        "//scribe:flight-scribe",
        "//siggy-chardust:siggy-chardust",
        ],
    visibility = ["//visibility:public"],
)
